--- a/SistemaVentasBatia/ClientApp/src/app/widgets/puestolayout/puestolayout.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/puestolayout/puestolayout.widget.html
@@ -15,24 +15,24 @@
                 <div class="modal-body">
                     <div>
                         <div class="row">
-                            <div class="col-md-6 mb-3 col-12">
+                            <div class="col-xl-6 mb-3 col-12">
                                 <div style="border-radius: 10px; overflow-x: hidden;max-height: 250px; overflow-y: auto; overflow-x: hidden">
                                     <table class="table table-borderless table-responsive table-striped">
                                         <thead class="sticky-top">
                                             <tr>
-                                                <td class="col-md-9">Puesto</td>
-                                                <td class="col-md-3">Id</td>
+                                                <td class="col-xl-9">Puesto</td>
+                                                <td class="col-xl-3">Id</td>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr *ngFor="let p of pues">
                                                 <td>
-                                                    <div class="col-md-9">
+                                                    <div class="col-xl-9">
                                                         <div>{{p.descripcion}}</div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="col-md-3">
+                                                    <div class="col-xl-3">
                                                         <div>{{p.id}}</div>
                                                     </div>
                                                 </td>
@@ -41,24 +41,24 @@
                                     </table>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3 col-6">
+                            <div class="col-xl-3 mb-3 col-6">
                                 <div style="border-radius: 10px; overflow-x: hidden;max-height: 250px; overflow-y: auto; overflow-x: hidden">
                                     <table class="table-striped table">
                                         <thead class="sticky-top">
                                             <tr>
-                                                <td class="col-md-8">Jornada</td>
-                                                <td class="col-md-4">Id</td>
+                                                <td class="col-xl-8">Jornada</td>
+                                                <td class="col-xl-4">Id</td>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr *ngFor="let j of ljor">
                                                 <td>
-                                                    <div class="col-md-8">
+                                                    <div class="col-xl-8">
                                                         <div>{{j.descripcion}}</div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="col-md-4">
+                                                    <div class="col-xl-4">
                                                         <div>{{j.id}}</div>
                                                     </div>
                                                 </td>
@@ -67,7 +67,7 @@
                                     </table>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3 col-6">
+                            <div class="col-xl-3 mb-3 col-6">
                                 <div style="border-radius: 10px; overflow-x: hidden;max-height: 250px; overflow-y: auto; overflow-x: hidden">
                                     <table class="table-striped table">
                                         <thead class="sticky-top">
@@ -79,12 +79,12 @@
                                         <tbody>
                                             <tr *ngFor="let t of turs">
                                                 <td>
-                                                    <div class="col-md-8">
+                                                    <div class="col-xl-8">
                                                         <div>{{t.descripcion}}</div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="col-md-4">
+                                                    <div class="col-xl-4">
                                                         <div>{{t.id}}</div>
                                                     </div>
                                                 </td>
@@ -94,24 +94,24 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-3 mb-3 col-6">
+                            <div class="col-xl-3 mb-3 col-6">
                                 <div style="border-radius: 10px; overflow-x: hidden;max-height: 250px; overflow-y: auto; overflow-x: hidden">
                                     <table class="table-striped table">
                                         <thead class="sticky-top">
                                             <tr>
-                                                <td class="col-md-6">Zona</td>
-                                                <td class="col-md-6">Id</td>
+                                                <td class="col-xl-6">Zona</td>
+                                                <td class="col-xl-6">Id</td>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr *ngFor="let t of tabs">
                                                 <td>
-                                                    <div class="col-md-6">
+                                                    <div class="col-xl-6">
                                                         <div>{{t.descripcion}}</div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="col-md-6">
+                                                    <div class="col-xl-6">
                                                         <div>{{t.id}}</div>
                                                     </div>
                                                 </td>
@@ -120,24 +120,24 @@
                                     </table>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3 col-6">
+                            <div class="col-xl-3 mb-3 col-6">
                                 <div style="border-radius: 10px; overflow-x: hidden;max-height: 250px; overflow-y: auto; overflow-x: hidden">
                                     <table class="table-striped table">
                                         <thead class="sticky-top">
                                             <tr>
-                                                <td class="col-md-8">Clase</td>
-                                                <td class="col-md-4">Id</td>
+                                                <td class="col-xl-8">Clase</td>
+                                                <td class="col-xl-4">Id</td>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr *ngFor="let c of lclas">
                                                 <td>
-                                                    <div class="col-md-8">
+                                                    <div class="col-xl-8">
                                                         <div>{{c.descripcion}}</div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="col-md-4">
+                                                    <div class="col-xl-4">
                                                         <div>{{c.id}}</div>
                                                     </div>
                                                 </td>
@@ -146,24 +146,24 @@
                                     </table>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3 col-6">
+                            <div class="col-xl-3 mb-3 col-6">
                                 <div style="border-radius: 10px; overflow-x: hidden;max-height: 250px; overflow-y: auto; overflow-x: hidden">
                                     <table class="table-striped table">
                                         <thead class="sticky-top">
                                             <tr>
-                                                <td class="col-md-8">Hora</td>
-                                                <td class="col-md-4">Id</td>
+                                                <td class="col-xl-8">Hora</td>
+                                                <td class="col-xl-4">Id</td>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr *ngFor="let h of hors">
                                                 <td>
-                                                    <div class="col-md-8">
+                                                    <div class="col-xl-8">
                                                         <div>{{h}} hora(s)</div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="col-md-4">
+                                                    <div class="col-xl-4">
                                                         <div>{{h}}</div>
                                                     </div>
                                                 </td>
@@ -172,24 +172,24 @@
                                     </table>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3 col-6">
+                            <div class="col-xl-3 mb-3 col-6">
                                 <div style="border-radius: 10px; overflow-x: hidden;max-height: 250px; overflow-y: auto; overflow-x: hidden">
                                     <table class="table-striped table">
                                         <thead class="sticky-top">
                                             <tr>
-                                                <td class="col-md-8">Dia</td>
-                                                <td class="col-md-4">Id</td>
+                                                <td class="col-xl-8">Dia</td>
+                                                <td class="col-xl-4">Id</td>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr *ngFor="let d of dias">
                                                 <td>
-                                                    <div class="col-md-8">
+                                                    <div class="col-xl-8">
                                                         <div>{{d.nom}}</div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="col-md-4">
+                                                    <div class="col-xl-4">
                                                         <div>{{d.id}}</div>
                                                     </div>
                                                 </td>
@@ -198,24 +198,24 @@
                                     </table>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3 col-6">
+                            <div class="col-xl-3 mb-3 col-6">
                                 <div style="border-radius: 10px; overflow-x: hidden;max-height: 250px; overflow-y: auto; overflow-x: hidden">
                                     <table class="table-striped table">
                                         <thead class="sticky-top">
                                             <tr>
-                                                <td class="col-md-8">Tipo Inmueble</td>
-                                                <td class="col-md-4">Id</td>
+                                                <td class="col-xl-8">Tipo Inmueble</td>
+                                                <td class="col-xl-4">Id</td>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr *ngFor="let t of tips">
                                                 <td>
-                                                    <div class="col-md-8">
+                                                    <div class="col-xl-8">
                                                         <div>{{t.descripcion}}</div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="col-md-4">
+                                                    <div class="col-xl-4">
                                                         <div>{{t.id}}</div>
                                                     </div>
                                                 </td>
@@ -224,24 +224,50 @@
                                     </table>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3 col-6">
+                            <div class="col-xl-3 mb-3 col-6">
                                 <div style="border-radius: 10px; overflow-x: hidden;max-height: 250px; overflow-y: auto; overflow-x: hidden">
                                     <table class="table-striped table">
                                         <thead class="sticky-top">
                                             <tr>
-                                                <td class="col-md-8">Frecuencia</td>
-                                                <td class="col-md-4">Id</td>
+                                                <td class="col-xl-8">Frecuencia</td>
+                                                <td class="col-xl-4">Id</td>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr *ngFor="let f of fres">
                                                 <td>
-                                                    <div class="col-md-8">
+                                                    <div class="col-xl-8">
                                                         <div>{{f.nom}}</div>
                                                     </div>
                                                 </td>
                                                 <td>
-                                                    <div class="col-md-4">
+                                                    <div class="col-xl-4">
+                                                        <div>{{f.id}}</div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 mb-3 col-6">
+                                <div style="border-radius: 10px; overflow-x: hidden;max-height: 250px; overflow-y: auto; overflow-x: hidden">
+                                    <table class="table-striped table">
+                                        <thead class="sticky-top">
+                                            <tr>
+                                                <td class="col-xl-8">Estado</td>
+                                                <td class="col-xl-4">Id</td>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr *ngFor="let f of edos">
+                                                <td>
+                                                    <div class="col-xl-8">
+                                                        <div>{{f.descripcion}}</div>
+                                                    </div>
+                                                </td>
+                                                <td>
+                                                    <div class="col-xl-4">
                                                         <div>{{f.id}}</div>
                                                     </div>
                                                 </td>
