--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/resumen/resumen.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/cotizacion/resumen/resumen.component.html
@@ -323,7 +323,7 @@
             <br />
 
 
-            <div *ngIf="model.idEstatus == 1" class="accordion col-xl-12" id="accordionExample">
+            <div class="accordion col-xl-12" id="accordionExample">
                 <!--Pestaña 0-->
                 <div class="accordion-item">
                     <h1 class="accordion-header" id="headingCotizacion">
