--- a/SistemaVentasBatia/ClientApp/src/app/widgets/cliente/cliente.widget.html
+++ b/SistemaVentasBatia/ClientApp/src/app/widgets/cliente/cliente.widget.html
@@ -303,7 +303,7 @@
                 </div>
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" (click)="guarda()" class="btn btn-outline-success" [disabled]="isLoading"><i class="fa-solid fa-user-plus"></i> Crear cliente</button>
+                    <button type="button" (click)="guarda()" class="btn btn-outline-primary" [disabled]="isLoading"><i class="fa-solid fa-user-plus"></i> Crear cliente</button>
                     <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
                 </div>
             </div>
